--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "Nikita Zanella",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "tailwind": "^4.0.0",
     "vite": "^4.5.3"
-  },
-  "devDependencies": {}
+  }
 }
