--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "preset",
     "plugin"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikitazanella/vite-shopify-preset.git"
+  },
   "author": "Nikita Zanella",
   "license": "MIT",
   "dependencies": {
