--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/nikitazanella/vite-shopify-preset.git"
+    "url": "git+https://github.com/nikitazanella/vite-shopify-preset.git"
   },
   "author": "Nikita Zanella",
   "license": "MIT",
